fixed small image position alignment

--- a/src/css/Cartitem.css
+++ b/src/css/Cartitem.css
@@ -13,6 +13,9 @@
 .cart-img-bx>img{
     max-height: 100%;
     max-width: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .chng-btn{
