--- a/src/css/Productcard.css
+++ b/src/css/Productcard.css
@@ -22,6 +22,9 @@
     max-width: 100%;
     display: block;
     margin: 0 auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .product-card-box p{
